--- a/WhatsApp-Clone/app/src/main/res/layout/activity_chat.xml
+++ b/WhatsApp-Clone/app/src/main/res/layout/activity_chat.xml
@@ -8,6 +8,30 @@
     tools:context=".activities.chat">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/azure"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/tv_reciver_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="TextView"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -43,7 +67,7 @@
                     android:id="@+id/tit_message"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="Enter message"
+                    android:hint="@string/enter_message"
                     android:inputType="textMultiLine"
                     android:textSize="14sp" />
 
@@ -77,9 +101,8 @@
         android:id="@+id/rv_message_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/grey"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
