--- a/WhatsApp-Clone/app/src/main/res/layout/fragment_third.xml
+++ b/WhatsApp-Clone/app/src/main/res/layout/fragment_third.xml
@@ -28,7 +28,7 @@
             android:id="@+id/tit_email_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Search"
+            android:hint="@string/search"
             android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
