--- a/WhatsApp-Clone/app/src/main/res/layout/user_search_item.xml
+++ b/WhatsApp-Clone/app/src/main/res/layout/user_search_item.xml
@@ -57,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:background="@color/transparent"
-                android:text="Add to contacts"
+                android:text="@string/add_to_contacts"
                 android:textColor="@color/azure"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
